검색한 투어 선택 시 해당 투어의 랜드마크 정보 출력 구현

--- a/Client/twiths_/Storyboard/Search.storyboard
+++ b/Client/twiths_/Storyboard/Search.storyboard
@@ -47,7 +47,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Ftb-5L-I5k" kind="show" id="Aeq-6H-5mp"/>
+                                    <segue destination="Ftb-5L-I5k" kind="show" identifier="ShowLandmark" id="Aeq-6H-5mp"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
