찜 메커니즘 구현 fixed #17 , 데이터베이스를 실시간데이터베이스에서 Cloud Firestore로 변경(다중쿼리문 사용을 위해)

--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
         <!--Jjim-->
         <scene sceneID="P1R-tk-4yW">
             <objects>
-                <viewControllerPlaceholder storyboardName="Jjim" id="U1k-TP-khG" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="Jjim" storyboardName="Jjim" id="U1k-TP-khG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="9zZ-44-4Ql"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hTK-L2-fBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
