--- a/Client/twiths_/Storyboard/Jjim.storyboard
+++ b/Client/twiths_/Storyboard/Jjim.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -135,7 +135,7 @@
         <!--찜목록-->
         <scene sceneID="Db5-uK-TRW">
             <objects>
-                <navigationController id="twK-6Y-2F8" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Jjim" useStoryboardIdentifierAsRestorationIdentifier="YES" id="twK-6Y-2F8" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="찜목록" id="zr1-5f-M3S"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ggL-g2-aaf">
